--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BPL 2024</title>
+    <title>BPL Auction 2024</title>
     <script src="https://kit.fontawesome.com/b0e41e6375.js" crossorigin="anonymous"></script>
   </head>
   <body>
